<http://webkit.org/b/108745> WTF shouldn't use a script build phase to detect the presence of headers when the compiler can do it for us

Reviewed by Sam Weinig.

Source/JavaScriptCore:

* DerivedSources.make: Remove an obsolete Makefile rule. This should have been removed when the use
of the generated file moved to WTF.

Source/WTF:

* WTF.xcodeproj/project.pbxproj: Remove the script phase that used to generate a header file
containing information about whether certain header files exist on the system.
* wtf/FastMalloc.cpp: Use Clang's __has_include to detect whether the header exists before including it.


Canonical link: https://commits.webkit.org/126962@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@141700 268f45cc-cd09-0410-ab3c-d52691b4dbfc