Source/WTF/wtf/FastMalloc.cpp
@@ -444,19 +444,19 @@ extern "C" WTF_EXPORT_PRIVATE const int jscore_fastmalloc_introspection = 0;
 #include <wtf/Vector.h>
 #endif
 
-#if HAVE(HEADER_DETECTION_H)
-#include "HeaderDetection.h"
-#endif
-
 #if HAVE(DISPATCH_H)
 #include <dispatch/dispatch.h>
 #endif
 
-#if HAVE(PTHREAD_MACHDEP_H)
+#ifdef __has_include
+#if __has_include(<System/pthread_machdep.h>)
+
 #include <System/pthread_machdep.h>
 
 #if defined(__PTK_FRAMEWORK_JAVASCRIPTCORE_KEY0)
 #define WTF_USE_PTHREAD_GETSPECIFIC_DIRECT 1
+#endif
+
 #endif
 #endif
 
